WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249331
[CSS-Typed-OM] Reification of CSSValues should stop converting string values to CSSKeywordValues
https://bugs.webkit.org/show_bug.cgi?id=249331
Summary
[CSS-Typed-OM] Reification of CSSValues should stop converting string values ...
Chris Dumez
Reported
2022-12-14 13:16:02 PST
Reification of CSSValues should stop converting string values to CSSKeywordValues. Only know keywords / identifiers should get converted to CSSKeywordValue, other strings should use get converted to the generic CSSStyleValue instead.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2022-12-14 13:17:27 PST
Pull request:
https://github.com/WebKit/WebKit/pull/7633
EWS
Comment 2
2022-12-15 09:47:56 PST
Committed
257932@main
(4b3c4dd45929): <
https://commits.webkit.org/257932@main
> Reviewed commits have been landed. Closing PR #7633 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-12-15 09:48:26 PST
<
rdar://problem/103407101
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug