[CSS-Typed-OM] Reification of CSSValues should stop converting string values to CSSKeywordValues https://bugs.webkit.org/show_bug.cgi?id=249331

Reviewed by Simon Fraser.

Reification of CSSValues should stop converting string values to CSSKeywordValues. Only known
keywords / identifiers should get converted to CSSKeywordValue, other strings should use get
converted to the generic CSSStyleValue instead.

* LayoutTests/imported/w3c/web-platform-tests/css/css-typed-om/the-stylepropertymap/properties/animation-name-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-typed-om/the-stylepropertymap/properties/font-family-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-typed-om/the-stylepropertymap/properties/list-style-type-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-typed-om/the-stylepropertymap/properties/quotes-expected.txt:
* Source/WebCore/css/typedom/CSSStyleValueFactory.cpp:
(WebCore::CSSStyleValueFactory::reifyValue):

Canonical link: https://commits.webkit.org/257932@main